Archive2/87/f8b1b97defc3f9/output
main.cpp:24:5: error: call to 'function' is ambiguous
    function(1);    //prints "integral"
    ^~~~~~~~
main.cpp:11:6: note: candidate function [with T = int, $1 = <>]
auto function(T t) {
     ^
main.cpp:18:6: note: candidate function [with T = int, $1 = <>]
auto function(T t) {
     ^
main.cpp:25:5: error: call to 'function' is ambiguous
    function(3.14); //prints "floating"
    ^~~~~~~~
main.cpp:11:6: note: candidate function [with T = double, $1 = <>]
auto function(T t) {
     ^
main.cpp:18:6: note: candidate function [with T = double, $1 = <>]
auto function(T t) {
     ^
2 errors generated.
